# gc_nes_emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
gc_nes_core/: Cargo.toml  README.md  README.tpl
gc_nes_core/src/: lib.rs
gc_nes_core/src/cartridge/: mapper.rs  mod.rs
gc_nes_core/src/input/: mod.rs
gc_nes_core/src/nes/: apu.rs  mod.rs  ppu.rs
gc_nes_desktop/: Cargo.toml  README.md
gc_nes_desktop/src/: main.rs
gc_nes_web/: Cargo.toml  README.md  README.tpl
gc_nes_web/src/: lib.rs  utils.rs
src/: cartridge.rs  lib.rs  main.rs
src/cartridge/: mapper.rs  mod.rs
src/input/: mod.rs
src/nes/: apu.rs  mod.rs  ppu.rs
