[package]
name = "gc_nes_core"
version = "0.1.0"
authors = ["Garett Cooper"]
edition = "2018"
description = "Simple rust implementation of a NES emulator, built on top of my emulator_6502 crate."
repository = "https://github.com/GarettCooper/gc_nes_emulator"
readme = "README.md"
keywords = ["emulator", "games", "nes"]
categories = ["emulators"]
license = "MIT"


[dependencies]
log = "0.4.8"
emulator_6502 = "1.0.0"
bitflags = "1.2.0"
simple-error = "0.2.1"
bit_reverse = "0.1.8"

[features]
default = []
web-frame-format = []