[package]
name = "gc_nes_desktop"
version = "0.1.0"
authors = ["Garett Cooper"]
edition = "2018"
description = "Simple rust implementation of a NES emulator, built on top of my emulator_6502 crate."
repository = "https://github.com/GarettCooper/gc_nes_emulator"
readme = "README.md"
keywords = ["emulator", "games", "nes"]
categories = ["emulators"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc_nes_core = { path = "../gc_nes_core", version = "0.1.0" }
log = "*"
env_logger = "0.7.0"
minifb = "0.13.0"
structopt = "0.3" # Replace with clap when 3.0.0 comes out of beta