[package]
name = "gc_nes_desktop"
version = "0.1.0"
authors = ["Garett Cooper"]
edition = "2018"
description = "Simple desktop executable NES emulator which wraps the gc_nes_core crate."
repository = "https://github.com/GarettCooper/gc_nes_emulator"
readme = "README.md"
keywords = ["emulator", "games", "nes"]
categories = ["emulators"]
license = "MIT"

[dependencies]
gc_nes_core = { path = "../gc_nes_core", version = "0.1.0" }
log = "0.4.8"
env_logger = "0.7.0"
minifb = "0.13.0"
structopt = "0.3" # Replace with clap when 3.0.0 comes out of beta