[package]
name = "gc_nes_web"
version = "0.1.0"
authors = ["Garett Cooper"]
edition = "2018"
description = "WASM wrapper for my gc_nes_core crate."
repository = "https://github.com/GarettCooper/gc_nes_emulator"
readme = "README.md"
keywords = ["emulator", "games", "nes"]
categories = ["emulators"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
gc_nes_core = { path = "../gc_nes_core", version = "0.1.0" }
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
